# ddc-crew-enterprise

./: README.md
client-android/: .gitignore  README.md  settings.gradle.kts  setup.sh
client-android/app/: build.gradle.kts
client-android/app/src/main/: AndroidManifest.xml
client-android/app/src/main/java/com/ddc/vpn/: DDCVpnApplication.kt  MainActivity.kt  MainViewModel.kt  MainViewModelFactory.kt
client-android/app/src/main/java/com/ddc/vpn/data/: ProfileRepository.kt  ProfileValidator.kt
client-android/app/src/main/java/com/ddc/vpn/model/: VpnModels.kt
client-android/app/src/main/java/com/ddc/vpn/tunnel/: AppTunnel.kt  TunnelManager.kt  WireGuardConfig.kt
client-android/app/src/main/java/com/ddc/vpn/ui/theme/: Theme.kt
client-android/app/src/main/res/drawable/: ic_launcher_foreground.xml
client-android/app/src/main/res/values/: colors.xml  styles.xml
client-android/app/src/test/java/com/ddc/vpn/data/: ProfileValidatorTest.kt
client-android/app/src/test/java/com/ddc/vpn/tunnel/: WireGuardConfigTest.kt
client-linux/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
client-linux/src/: main.tsx  styles.css
client-linux/src-tauri/: Cargo.toml  tauri.conf.json
client-linux/src-tauri/src/: profile.rs  tunnel.rs
client-windows/: README.md  package-lock.json  package.json
client-windows/src/: main.tsx
client-windows/src-tauri/: Cargo.toml  tauri.conf.json
client-windows/src-tauri/src/: app_state.rs  commands.rs  lib.rs  main.rs  storage.rs  tunnel.rs
svc-vpn/: .gitignore  Cargo.toml  README.md
svc-vpn/examples/: config.toml
svc-vpn/packaging/: svc-vpn.service
svc-vpn/src/: config.rs  device.rs  lib.rs  main.rs  net.rs  peer.rs  protocol.rs  routing.rs  service.rs
