[package]
name = "svc-vpn"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
blake2 = "0.10"
bytes = "1.7"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
constant_time_eq = "0.3"
generic-array = "0.14"
hex = "0.4"
ipnet = { version = "2.10", features = ["serde"] }
nix = { version = "0.29", features = ["fs", "ioctl", "net", "signal", "socket"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
subtle = "2.6"
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3.12"
