[package]
name = "ddc-vpn-client"
version = "0.1.0"
description = "DDC VPN Linux client"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "ddc_vpn_client"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ddc-vpn-client"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
dirs = "5.0"
hex = "0.4"
ipnet = { version = "2.10", features = ["serde"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1.40", features = ["net", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.12"
